--- a/tt-frontend/src/Components/Chart/Chart.css
+++ b/tt-frontend/src/Components/Chart/Chart.css
@@ -4,8 +4,8 @@
     border: 5px;
     height: 420px;
     width: 800px;
-    background-color:#fff1f0;
-    border-color: #f5222d;
+    background-color:#dfdfdf;
+    border-color: #292929;
     border-radius: 2%;
     text-align: right;
 }
