--- a/tt-frontend/src/Components/Dashboard/Dashboard.css
+++ b/tt-frontend/src/Components/Dashboard/Dashboard.css
@@ -1,9 +1,16 @@
+
+#prediction-title {
+    align-content: flex-end;
+}
+
 #get-data {
     margin-top: 32px;
-    margin-right: 80px
+    
 }
 
 #data-search {
     margin-left: 3px;
 }
+
+
 
